<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Splurge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_restaurant_view">RestaurantView</string>
    <string name="bistro_title">Bistro</string>
    <string name="new_reserv_title">Reservations</string>
    <string name="make_label">Make Your Reservation</string>
    <string name="change_label">Change Your Reservation</string>
    <string name="cancel_label">Cancel Your Reservation</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="menu_title">Menus</string>
    <string name="take_out">Take-Out</string>
    <string name="delivery">Delivery</string>
    <string name="dining_out_title">Dining Out</string>
    <string name="title_activity_breakfast_menu">BreakfastMenuActivity</string>
    <string name="title_activity_lunch_menu">LunchMenuActivity</string>
    <string name="title_activity_food_menu">FoodMenuActivity</string>
    <string name="title_activity_restaurant_main_menu_fragment">RestaurantMainMenuFragment</string>
    <string name="title_activity_food_item">FoodItemActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_dining_out">DiningOutActivity</string>
    <string name="title_activity_wrapper">WrapperActivity</string>
    <string name="dining_out">DINING OUT</string>
    <string name="information">INFORMATION</string>
    <string name="menu">MENU</string>
    <string name="reserve">RESERVATION</string>
    <string name="map">Map</string>
    <string name="waiters">Waiters</string>
    <string name="title_activity_delivery_form_fragment">DeliveryFormFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="reservations_full">We are sorry, but all reservations for that time are taken.</string>
    <string name="restaurant_closed">We are sorry, but the restaurant is closed at that time.</string>
    <string name="person_name">Name</string>
    <string name="person_email">Email</string>
    <string name="person_phone_number">Phone Number</string>
    <string name="person_street_address">Street Address</string>
    <string name="person_city">City</string>
    <string name="person_state">State</string>
    <string name="person_zip_code">Zip Code</string>
    <string name="person_apt_number">Suite/Apt#</string>
    <string name="place_order">Place Order</string>
    <string name="phone_unavailable">Sorry, but your device does not appear to support phone calls at this time.</string>
    <string name="order_summary">Order Summary</string>
    <string name="hello">Open calendar</string>
    <string name="open">Submit Reservation</string>
    <string name="order_notes">Order Notes</string>
    <string name="party_size">Party Size:</string>
    <string name="party_name">Party Name:</string>
    <string name="request_dineout_items">Please select items for request.</string>
    <string name="notes">* For party sizes greater than 10, please call the   restaurant</string>

</resources>