<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/woodblurred"
    android:padding="7dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:gravity="center"
        android:text="@string/bistro_title"
        android:background="@drawable/tablecloth"
        android:textSize="50sp" />

    <Button
        android:id="@+id/plate1"
        android:layout_width="150dip"
        android:layout_height="110dip"
        android:layout_gravity="left"
        android:layout_below="@id/title"
        android:layout_marginTop="35dip"
        android:text="@string/reserve"
        android:background="@drawable/plate" />

    <Button
        android:id="@+id/plate2"
        android:layout_width="150dip"
        android:layout_height="110dip"
        android:layout_toRightOf="@id/plate1"
        android:layout_below="@id/title"
        android:layout_gravity="right"
        android:layout_marginTop="70dip"
        android:background="@drawable/plate"
        android:text="@string/menu" />

    <Button
        android:id="@+id/plate3"
        android:layout_width="150dip"
        android:layout_height="110dip"
        android:background="@drawable/plate"
        android:layout_below="@id/plate1"
        android:layout_marginTop="50dip"
        android:text="@string/waiters" />

    <Button
        android:id="@+id/other_button"
        android:layout_width="150dip"
        android:layout_height="110dip"
        android:layout_below="@id/plate2"
        android:layout_marginTop="50dip"
        android:layout_toRightOf="@id/plate3"
        android:background="@drawable/plate"
        android:text="@string/map" />

</RelativeLayout>