<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/background_deliveryform"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name" />

            <EditText
                android:id="@+id/form_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_email" />

            <EditText
                android:id="@+id/form_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_phone_number" />

            <EditText
                android:id="@+id/form_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_street_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_street_address" />

            <EditText
                android:id="@+id/form_street_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_apt_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_apt_number" />

            <EditText
                android:id="@+id/form_apt_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_city" />

            <EditText
                android:id="@+id/form_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/person_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_state" />

            <EditText
                android:id="@+id/form_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_zip_code" />

            <EditText
                android:id="@+id/form_zip_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/order_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_notes" />

            <EditText
                android:id="@+id/form_order_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/place_order_button"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_regular"
        android:text="@string/place_order"
        android:textColor="@color/white" />

</LinearLayout>